K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-host
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-host
  template:
    metadata:
      labels:
        app: api-host
    spec:
      containers:
      - name: api-host
        image: ghcr.io/sebi364/m169:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-host
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
